--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Link HTML to CSS -->
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style_i.css">
 
 </head>
 
