--- a/portfolio.html
+++ b/portfolio.html
@@ -25,21 +25,36 @@
   	
   	<img id="BackgroundPic" src="assets/images/pink_rice.png" alt="background">
 
-	    <section id="Portfolio">
+	    <section class="Content">
 
 	      <h2>Portfolio</h2>
 
-	      	<img id="Preview" src="assets/images/placeholder1.jpg" alt="headshot">
+	      		<div class="boxes">
+	      			<img class="preview" src="assets/images/placeholder1.jpg" alt="placeholder1">
+	      			<a class="title" href="#">Project 1</a>
+	      		</div>
 
-	      	<img id="Preview" src="assets/images/placeholder2.jpg" alt="headshot">
+	      		<div class="boxes">
+	      			<img class="preview" src="assets/images/placeholder2.jpg" alt="placeholder2">
+	      			<a class="title" href="#">Project 2</a>
+	      		</div>
 
-	      	<img id="Preview" src="assets/images/placeholder3.jpg" alt="headshot">
+	      		<div class="boxes">
+	      			<img class="preview" src="assets/images/placeholder3.jpg" alt="placeholder3">
+	      			<a class="title" href="#">Project 3</a>
+	      		</div>
 
-	      	<img id="Preview" src="assets/images/placeholder4.jpg" alt="headshot">
+	      		<div class="boxes">
+	      			<img class="preview" src="assets/images/placeholder4.jpg" alt="placeholder4">
+	      			<a class="title" href="#">Project 4</a>
+	      		</div>
 
-	      	<img id="Preview" src="assets/images/placeholder5.jpg" alt="headshot">
+	      		<div class="boxes">
+	      			<img class="preview" src="assets/images/placeholder5.jpg" alt="placeholder5">
+	      			<a class="title" href="#">Project 5</a>
+	      		</div>
 
-	    </section>
+  		</section>
 
 	    <section id="Connect">
 	      
