--- a/contact.html
+++ b/contact.html
@@ -32,12 +32,12 @@
 	      	<form action="#">
 			  	<br>
 			  	Name:<br>
-				<input type="text" name="fullname" value="Jane Doe"><br><br>
+				<input type="text" name="fullname" placeholder="Jane Doe"><br><br>
 				Email Address:<br>
-				<input type="text" name="email" value="example@gmail.com"><br><br>
+				<input type="text" name="email" placeholder="example@gmail.com"><br><br>
 				Message:<br>
-				<textarea name="message" rows="10" cols="65"></textarea><br><br>
-				<input type="submit" value="Submit"><br><br>
+				<textarea name="message" rows="10" cols="64"></textarea><br><br>
+				<input id=submit type="submit" value="Submit"><br><br>
 			</form>
 
 	    </section>
