--- a/contact.html
+++ b/contact.html
@@ -41,12 +41,12 @@
 			</form>
 
 	    </section>
-
+ 
 	    <section id="Connect">
 	      
 	      <h3>Connect with Me</h3>
 	      
-			<a target="_blank" href="https://github.com/vdean2011">
+			<a target="_blank" href="https://github.com/techitori">
  			 <img id="logos" src="assets/images/github.png" alt="github">
 			</a>
 			<a target="_blank" href="https://www.linkedin.com/in/victoriadean1/">
