--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	      
 	      <h3>Connect with Me</h3>
 	      
-			<a target="_blank" href="https://github.com/vdean2011">
+			<a target="_blank" href="https://github.com/techitori">
  			 <img id="logos" src="assets/images/github.png" alt="github">
 			</a>
 			<a target="_blank" href="https://www.linkedin.com/in/victoriadean1/">
